--- a/style.css
+++ b/style.css
@@ -4,12 +4,7 @@
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
-/*--
-body{
-    background: #080808;
-    color: #fff;
-}
---*/
+
 #header{
     width: 100%;
     height: 100vh;
@@ -40,6 +35,74 @@ nav ul li a{
     font-size: 18px;
 }
 
-#about{
-    position: absolute;
+/*--barangay officials--*/
+.wrapper{
+    margin: 0 auto;
+    width: 420px;
+    text-align: center;
+}
+h1{
+    margin-bottom: 40px;
+}
+h2{
+    margin-top: 10px;
+}
+.wrapper-2 ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 50px 110px;
+}
+.img-cpt{
+    width: 300px;
+    height: 350px;
+}
+.wrapper-2{
+    margin-block: 10px;
+    margin-inline: 20px;
+}
+h3{
+    text-align: center;
+}
+p{
+    text-align: center;
+}
+.img-kagawad{
+    width: 250px;
+    height: 300px;
+    padding: 10px;
+}
+.wrapper-3 ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 20px 60px;
+}
+/*-- promotion --*/
+#promotion{
+    padding: 80px 0;
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 70px;
+}
+h4{
+    font-size: 200%;
+    text-align: center;
+}   
+.prom-col-1{
+    flex-basis: 35%;
+}
+.prom-col-1 img{
+    padding-top: 10px;
+    width: 100%;
+    border-radius: 25px;
+}
+.prom-col-2{
+    flex-basis: 60%;
+}
+.sub-title{
+    font-size: 300%;
+    font-weight: 500px;
+    text-align: center;
 }
