--- a/style.css
+++ b/style.css
@@ -34,6 +34,15 @@ nav ul li a{
     text-decoration: none;
     font-size: 18px;
 }
+.header-text{
+    margin-top: 10%;
+    font-size: 20px;
+}
+h6{
+    font-size: 60px;
+    margin-top: 70px;
+    text-align: center;
+}
 
 /*--barangay officials--*/
 .wrapper{
@@ -104,5 +113,19 @@ h4{
 .sub-title{
     font-size: 300%;
     font-weight: 500px;
+    text-align: center;
+}
+/*--footer--*/
+.brgypic{
+    height: 300px;
+    width: 700px;
+    border-radius: 15px;
+    flex-basis: 20%;
+}
+h5{
+    font-size: 200%;
+    text-align: center;
+}
+.quote{
     text-align: center;
 }
