--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 #header{
     width: 100%;
     height: 100vh;
@@ -21,6 +23,7 @@ nav{
 
 .logo{
     width: 140px;
+    border-radius: 15px;
 }
 
 nav ul li{
@@ -60,10 +63,12 @@ h2{
     display: inline-block;
     list-style: none;
     margin: 50px 110px;
+    border-radius: 15px;
 }
 .img-cpt{
     width: 300px;
     height: 350px;
+    border-radius: 15px;
 }
 .wrapper-2{
     margin-block: 10px;
@@ -79,6 +84,7 @@ p{
     width: 250px;
     height: 300px;
     padding: 10px;
+    border-radius: 25px;
 }
 .wrapper-3 ul li{
     display: inline-block;
